--- a/config/vox-256.yaml
+++ b/config/vox-256.yaml
@@ -1,5 +1,5 @@
 dataset_params:
-  root_dir: data/vox-png
+  root_dir: /home/group1/video-preprocessing/vox
   frame_shape: [256, 256, 3]
   id_sampling: True
   pairs_list: data/vox256.csv
@@ -52,7 +52,7 @@ train_params:
   lr_kp_detector: 2.0e-4
   batch_size: 5
   scales: [1, 0.5, 0.25, 0.125]
-  checkpoint_freq: 50
+  checkpoint_freq: 1
   transform_params:
     sigma_affine: 0.05
     sigma_tps: 0.005
@@ -64,3 +64,4 @@ train_params:
     perceptual: [10, 10, 10, 10, 10]
     equivariance_value: 10
     equivariance_jacobian: 10
+
